--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,16 +10,24 @@ on:
     branches: [ "master" ]
 
 jobs:
-
-  build:
-    runs-on: ubuntu-latest
+  ci:
+    name: CI
+    strategy:
+      matrix:
+        go: [ '1.18', '1.19', '1.20', '1.21' ]
+        os: [ 'ubuntu-latest', 'windows-latest', 'macOS-latest' ]
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
 
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.21'
+        go-version: ${{ matrix.go }}
+
+    - name: Run gofmt
+      run: test -z "$(go fmt ./...)"
+      shell: bash
 
     - name: Build
       run: go build -v ./...
