--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         go: [ '1.18', '1.19', '1.20', '1.21' ]
-        os: [ 'ubuntu-latest', 'windows-latest', 'macOS-latest' ]
+        os: [ 'ubuntu-latest', 'macOS-latest' ]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
@@ -26,7 +26,8 @@ jobs:
         go-version: ${{ matrix.go }}
 
     - name: Run gofmt
-      run: if [ "$(gofmt -s -l . | wc -l)" -gt 0 ]; then exit 1; fi
+      run: test -z "$(go fmt ./...)"
+      shell: bash
 
     - name: Build
       run: go build -v ./...
