--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,8 +14,8 @@ jobs:
     name: CI
     strategy:
       matrix:
-        go: [ '1.18', '1.19', '1.20', '1.21' ]
-        os: [ 'ubuntu-latest', 'macOS-latest' ]
+        go: [ '1.18', '1.19', '1.20', '1.21', '1.22' ]
+        os: [ 'ubuntu-latest', 'macOS-latest', 'windows-latest' ]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
